--- a/src/assets/sass/pages/p-home.scss
+++ b/src/assets/sass/pages/p-home.scss
@@ -130,8 +130,7 @@
   bottom: 0;
   width: 100%;
   padding-bottom: rem(20);
-  z-index: 99999;
-  transform: translateZ(1px); // 3Dレイヤ描画で最前面を強制
+  z-index: 200; // ヘッダー(100)より手前
   display: flex;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
