--- a/src/assets/sass/settings/base.scss
+++ b/src/assets/sass/settings/base.scss
@@ -28,6 +28,11 @@ body {
   }
 }
 
+#page-container {
+  position: relative;
+  z-index: 1; // ユーザー指摘に基づき、100未満に設定
+}
+
 body::-webkit-scrollbar {
   display: none;
 }
